--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,3 @@
-
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -62,4 +60,113 @@ h1, h2, h3, h4, h5 {
 
 p {
     line-height: 1.4;
+}
+
+.container {
+  width: 100%;
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+.header-section {
+  display: flex;
+  flex-flow: column;
+}
+
+#name-text {
+  margin-top: 32px;
+}
+
+.header-text {
+  text-align: center;
+  padding: 12px 0px 8px 0px;
+  font-size: 6.4rem;
+}
+
+.navigation {
+	display: flex;
+	justify-content: center;
+	align-items: baseline;
+	margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+a.nav-button {
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 8px;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Shadows Into Light', cursive;
+  display: inline-block;
+  font-size: 2.4rem;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border: 1px solid #555555;
+}
+
+a.nav-button:hover {
+  background-color: #555555;
+  color: white;
+}
+
+#intro-text {
+  margin: 16px 0px;
+  padding: 0px 4%;
+  font-size: 1.8rem;
+}
+
+.mid-img {
+  max-width: 100%;
+}
+
+.project-section {
+  margin: 16px 0px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-box {
+  width: 19%;
+}
+
+#word-box {
+  width: 19%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1.8rem;
+  padding-right: 1%;
+}
+
+footer {
+    width: 100%;
+    background: #C0BFBD;
+    display: flex;
+    justify-content: center;
+    padding: 16px;
+}
+
+a.button {
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 8px 2%;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Shadows Into Light', cursive;
+  display: inline-block;
+  font-size: 2.4rem;
+  margin: 16px 1%;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border: 2px solid #555555;
+}
+
+a.button:hover {
+  background-color: #555555;
+  color: white;
 }
