--- a/style/index.css
+++ b/style/index.css
@@ -171,7 +171,7 @@ a.button:hover {
   color: white;
 }
 
-@media(max-width: 800px){
+@media(max-width: 768px){
 	.container {
     width: 100%;
     max-width: 800px;
@@ -193,7 +193,7 @@ a.button:hover {
   }
 }
 
-@media(max-width: 600px){
+@media(max-width: 640px){
 	.container {
     width: 100%;
     max-width: 640px;
@@ -215,7 +215,7 @@ a.button:hover {
 
   .project-box {
     width: 48%;
-    margin: 8px 0;
+    margin: 8px 1%;
     border: 1px solid black;
   }
 
